[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/thaleah_fat_7.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/HUD/CharacterInfoPanel.gd" type="Script" id=2]

[node name="CharacterStats" type="Control"]
margin_right = 69.0
margin_bottom = 50.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 2.0
margin_right = -4.0
margin_bottom = 18.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterNameLabel" type="Label" parent="VBoxContainer"]
margin_right = 61.0
margin_bottom = 4.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 61.0
margin_bottom = 12.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPLabel" type="Label" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 61.0
margin_bottom = 20.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "SP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrLabel" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 61.0
margin_bottom = 28.0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 1 )
text = "str:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VitLabel" type="Label" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 61.0
margin_bottom = 36.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "vit:"

[node name="IntLabel" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 61.0
margin_bottom = 44.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "int:"

[node name="DexLabel" type="Label" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 61.0
margin_bottom = 52.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "dex:"
